--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "precommit": "pretty-quick --staged"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^2.7.0",
+    "prettier": "^1.14.3",
     "pretty-quick": "^1.7.0"
   }
 }
