--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "jwt-simple": "^0.5.5",
     "mongoose": "^5.3.8",
     "morgan": "^1.9.1"
   },
