--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "express": "^4.16.4",
     "jwt-simple": "^0.5.5",
     "mongoose": "^5.3.8",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
